more improvments and chebyshev added

--- a/setup.cfg
+++ b/setup.cfg
@@ -58,7 +58,7 @@ ignore =
     WPS100, WPS110, WPS114,
     WPS210, WPS220, WPS237, WPS238,
     WPS305, WPS306, WPS317, WPS323, WPS326, WPS352, WPS362,
-    WPS410, WPS412, WPS421, WPS432, WPS518,
+    WPS404, WPS410, WPS412, WPS421, WPS432, WPS518,
     WPS600, WPS601, WPS602,
     # bandit
     S101, S105, S404, S602, S607,
