refactoring continues. ffa code corrected. examples updated

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -36,7 +36,7 @@ dependencies = [
     "matplotlib",
     "rocket-fft",
     "h5py",
-    "sigpyproc @ git+https://github.com/FRBs/sigpyproc.git",
+    "sigpyproc @ git+https://github.com/FRBs/sigpyproc3.git",
 ]
 
 [project.urls]
