--- a/pyproject.toml
+++ b/pyproject.toml
@@ -66,7 +66,7 @@ indent-style = "space"
 
 [tool.ruff.lint]
 select = ["ALL"]
-ignore = ["D1", "ANN1", "ANN003", "PLR2004", "PD901", "G004"]
+ignore = ["D1", "ANN003", "PLR2004", "PD901", "G004"]
 
 [tool.ruff.lint.pylint]
 max-args = 15
