never use jitclass. prfer structref. making codes more modular. prune function can now be cached

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -78,6 +78,8 @@ max-args = 15
 [tool.ruff.lint.pydocstyle]
 convention = "numpy"
 
+[tool.ruff.lint.flake8-unused-arguments]
+ignore-variadic-names = true
 
 [tool.pytest.ini_options]
 minversion = "8.0"
