added another plotter class to show complexity per run

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,10 +29,12 @@ dependencies = [
     "numpy>=2.0",
     "numba",
     "astropy",
+    "xarray",
     "attrs",
     "click",
     "rich",
     "matplotlib",
+    "seaborn",
     "rocket-fft",
     "h5py",
     "sigpyproc @ git+https://github.com/FRBs/sigpyproc3.git",
