Enhance FFA sensitivity with Fourier shifts. Refactored core code into taylor basis module. Added code for circular orbit pruning.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -75,7 +75,17 @@ indent-style = "space"
 
 [tool.ruff.lint]
 select = ["ALL"]
-ignore = ["D1", "ANN003", "PLR2004", "PD901", "G004", "E712"]
+ignore = [
+    "D1",
+    "ANN003",
+    "PLR2004",
+    "PD901",
+    "G004",
+    "E712",
+    "FBT001",
+    "TD",
+    "FIX",
+]
 
 [tool.ruff.lint.mccabe]
 max-complexity = 15
