Update PulsarSearchConfig parameters and enhance type checking
- Exploring branching pattern improvement

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -139,4 +139,5 @@ include = [
 
 [tool.ty.overrides.rules]
 invalid-assignment = "ignore"
+invalid-return-type = "ignore"
 unresolved-attribute = "ignore"
